clusters/main/kubernetes/system/networkpolicies/app/kube-prometheus-stack-grafana-allow-ingress-gatus-internal.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-gatus-internal-grafana
  namespace: kube-prometheus-stack
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/name: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gatus
            k8s:app.kubernetes.io/instance: gatus
            k8s:app.kubernetes.io/name: gatus
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
